# forest_map_generator

./: LICENSE  package.xml  readme  readme.md  setup.cfg  setup.py
forest_map_generator/: forest_map_generator.py
launch/: gazebo.launch.py  tree_generator.launch.py
models/oak_tree/: model.sdf
models/pine_tree/: model.sdf
models/road/: model.config  model.sdf
models/terrain/: model.config  model.sdf
models/tree1/: model.config  model.sdf
models/tree10/: model.sdf
models/tree11/: model.sdf
models/tree12/: model.sdf
models/tree13/: model.sdf
models/tree14/: model.sdf
models/tree2/: model.sdf
models/tree3/: model.sdf
models/tree4/: model.sdf
models/tree5/: model.sdf
models/tree6/: model.sdf
models/tree7/: model.sdf
models/tree8/: model.sdf
models/tree9/: model.sdf
resource/: forest_map_generator
scripts/: main.py  ply_to_gazebo_textured.py  tree1.ply
scripts/output/: test1_collision.stl  test1_mesh.dae  tree10_collision.stl  tree11_collision.stl  tree11_mesh.dae  tree12_collision.stl  tree13_collision.stl  tree14_mesh.dae  tree1_collision.stl  tree2_collision.stl  tree3_collision.stl  tree3_mesh.dae  tree3_visual_colored.ply  tree4_mesh.dae  tree5_mesh.dae  tree5_visual_colored.ply  tree6_collision.stl  tree7_collision.stl  tree8_collision.stl  tree9_visual_colored.ply
scripts/ply_to_gazebo_textured/: bake_vcol_to_texture.py  main.py  tree_mesh.dae
scripts/trees_ply/: test1.ply  tree10.ply  tree12.ply  tree14.ply  tree2.ply  tree3.ply  tree5.ply  tree7.ply  tree8.ply  tree9.ply
worlds/: world.world
(+62 files in other folders)
