<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>forest_map_generator</name>
  <version>0.0.0</version>
  <description>Forest map generator package for heightmaps and terrain</description>
  <maintainer email="xintong.jiang@unb.ca">Xintong Jiang</maintainer>
  <license>Apache License 2.0</license>

  <!-- ament_python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Python dependencies -->
  <depend>rclpy</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pil</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>gazebo_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>